save new alarm to DB

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "@types/socket.io-client": "^1.4.32",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "method-override": "^2.3.10",
     "mongodb": "^2.2.31",
+    "mongoose": "^4.13.7",
     "request-ip": "^2.0.2",
     "rpi-ws281x-native": "^0.8.2",
     "rxjs": "^5.5.2",
