--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@types/node-schedule": "^1.2.1",
     "@types/socket.io-client": "^1.4.32",
     "body-parser": "^1.18.2",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mcp-spi-adc": "^1.0.0",
     "method-override": "^2.3.10",
     "mongodb": "^2.2.31",
     "mongoose": "^4.13.7",
+    "ng2-charts": "^1.6.0",
     "node-cron": "^1.2.1",
     "node-schedule": "^1.2.5",
     "python-shell": "^0.4.0",
