--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "make-runnable": "^1.3.6",
     "mcp-spi-adc": "^1.0.0",
     "method-override": "^2.3.10",
     "mongodb": "^2.2.31",
